<resources>
    <string name="app_name">NotificationPush</string>
    <string name="service_name">GetNotification</string>
    <string name="access_name">ForegroundMonitor</string>
    <string name="descript_access">Hide notification when app is foreground</string>
    <string name="server">Server</string>
    <string name="start">Start</string>
    <string name="hide_no_content">Hide No Content</string>
    <string name="summary_hide_no_content">Hide notification which has no content</string>
    <string name="DeviceID">DeviceID</string>
    <string name="summary_DeviceID">Where do you want to send</string>
    <string name="priority">Change Priority</string>
    <string name="summary_priority">Change send priority</string>

    <string name="client">Client</string>
    <string name="hide">Hide when Foreground</string>
    <string name="token">Token</string>
    <string name="summary_token">Local token</string>
    <string name="clear">Remove All Channels</string>
    <string name="summary_clear">Remove notification channels</string>
    <string name="avatar">Show Avatar for QQ</string>
    <string name="summary_avatar">Download and show QQ avatar</string>
    <string name="login">Sync QQ Contacts Datebase</string>
    <string name="summary_login">Please do not sync repeatly</string>

    <array name="priorityContent">
        <item>Normal</item>
        <item>High</item>
        <item>off</item>
    </array>

    <string name="colors">Change Color</string>
    <string name="about">About</string>
    <string name="HowToUse">此应用可以通过fcm通道从一台手机向另一台手机转发通知\n如果token显示fail，请检查Google框架并尝试翻墙重启应用\n你只需要将token(就是那堆乱码)复制到服务端的输入框，点击开始转发即可开始推送\n注意设置优先级指发送的优先级\n要开启头像显示需至少先同步一次数据库\n服务端必须24小时翻墙\n—by Adama</string>
    <string name="title_activity_application">Application</string>
    <string name="title_QQ_Login">QQ Login</string>
    <string name="clear_cookies">Clear cookies</string>
    <string name="refresh">Refresh</string>
    <string name="logcat">Logcat</string>
    <string name="filter">exclude system app</string>
    <string name="startForeground">Start Foreground service</string>
    <string name="summary_startForeground">To keep alive</string>
    <string name="reverse">close all Notification</string>
    <string name="ringForEach">Alert every time</string>
    <string name="summary_ringForEach">Alert for every notice</string>
    <string name="search">search</string>
    <string name="positive">reset to normal</string>
</resources>
