<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/start"
        android:textSize="18sp"
        tools:checked="true" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:hint="@string/DeviceID"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|text"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:textColor="@android:color/black"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textIsSelectable="true" />

    <Button
        android:id="@+id/clear"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear" />

    <Button
        android:id="@+id/colors"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/colors" />

    <Button
        android:id="@+id/about"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about" />
</LinearLayout>